# mftools_working

./: .gitignore  1_CellSeg.py  1qc_CellSegQC.py  2_label_transfer.py  README.md  config.ini  config.master.ini  mftools.yml  pyproject.toml
click/: meta.yml
mftools/: __init__.py  barcodes.py  cellgene.py  fileio.py  mfexperiment.py  plotting.py  scanpy_wrap.py  segmentation.py  stats.py
mftools_test/: mfexperimentTest.py  segmentationTest.py
scripts/: 1_Cell_Segmentation_newmodeltest.ipynb  Liver_label_transfer.ipynb
