[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ['scripts', 'wip']

[project]
name = "merfish-tools"
version = "0.0.2"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scanpy",
    "anndata",
    "tqdm",
    "scikit-learn",
    "scikit-image>=0.18",
    "scipy",
    "faiss-cpu",
    "h5py",
    "cellpose"
]
